--- a/pom.xml
+++ b/pom.xml
@@ -272,7 +272,12 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
-    
+        <dependency>
+            <groupId>org.jarbframework</groupId>
+            <artifactId>jarb-sample</artifactId>
+            <version>2.0.3</version>
+            <type>war</type>
+        </dependency>
     </dependencies>
     
     <dependencyManagement>
